# pywishart

./: README.md  pyproject.toml
docs/: requirements.txt
docs/source/: conf.py  index.rst
pywishart/: pywishart.py
