[tool.poetry]
name = "pywishart"
version = "0.1.0"
description = "Central and non-central Wishart sampling."
homepage = "https://github.com/stla/pywishart"
authors = ["Stéphane Laurent <laurent_step@outlook.fr>"]
documentation = "https://pywishart.readthedocs.io/en/latest/"
keywords = ["statistics", "distributions"]
license = "GPL-3.0-only"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.2"
scipy = "^1.11.4"
sphinx = { version = "^7.2.0", optional = true }
sphinx-rtd-theme = { version = "^1.3.0", optional = true }
sphinxcontrib-napoleon = { version = "^0.7", optional = true }
sphinxcontrib-restbuilder = { version = "^0.3", optional = true }

[tool.poetry.extras]
docs = ["Sphinx", "sphinx-rtd-theme", "sphinxcontrib-napoleon", "sphinxcontrib-restbuilder"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
